--- a/PycharmProjects/logbit-assessment-front-marlon (2)/logbit-assessment-front-marlon/curso/templates/video_templates/video_list.html
+++ b/PycharmProjects/logbit-assessment-front-marlon (2)/logbit-assessment-front-marlon/curso/templates/video_templates/video_list.html
@@ -15,7 +15,7 @@
             <h4 class="card-title">Iniciar Quiz</h4>
         </div>
 
-        <a href="https://simulador.logbit.com.br/perguntas/responder/pergunta_multipla_escolha/4/?curso=1" class="btn quiz">
+        <a href="" class="btn quiz">
             Começar
         </a>
     </div>
