--- a/PycharmProjects/logbit-assessment-front-marlon (2)/logbit-assessment-front-marlon/templates/base/header.html
+++ b/PycharmProjects/logbit-assessment-front-marlon (2)/logbit-assessment-front-marlon/templates/base/header.html
@@ -6,7 +6,7 @@
             <div class="menu-btn__burger"></div>
         </div>
     
-        <img src="{% static 'assessment/assets/dist/images/logo_image.png' %}" height="80px" alt="logo"/>
+        <img src="{% static 'assessment/assets/dist/images/logo_image.png' %}" class="h-[5rem] sm:h-[4rem]" alt="logo"/>
     </div>
 
     <div class="input-container">
