--- a/PycharmProjects/logbit-assessment-front-marlon (2)/logbit-assessment-front-marlon/assessment/static/assessment/assets/src/css/utilities/util.css
+++ b/PycharmProjects/logbit-assessment-front-marlon (2)/logbit-assessment-front-marlon/assessment/static/assessment/assets/src/css/utilities/util.css
@@ -46,3 +46,8 @@
 	-webkit-line-clamp: 2;
 	-webkit-box-orient: vertical;
 }
+
+.tippy-box {
+	@apply font-bold text-neutral-90 border border-neutral-40 rounded text-sm;
+	box-shadow: 0px 4px 8px rgba(27, 29, 38, 0.15);
+}
