--- a/PycharmProjects/logbit-assessment-front-marlon (2)/logbit-assessment-front-marlon/curso/templates/video_templates/video_player.html
+++ b/PycharmProjects/logbit-assessment-front-marlon (2)/logbit-assessment-front-marlon/curso/templates/video_templates/video_player.html
@@ -20,7 +20,13 @@
 
 
     <div js-overlay class="absolute bg-[#00000080] inset-0 flex items-center justify-center gap-24 invisible opacity-0 transition-opacity">
-        <a href="" js-back class="group flex items-center gap-8 font-medium text-base text-white leading-[1.1875rem]">
+        <a 
+            href="/cursos/video/{{modulo_atual.id}}/{{video_anterior.id}}/?curso={{modulo_atual.id}}" 
+            class="
+                group flex items-center gap-8 font-medium text-base text-white leading-[1.1875rem] 
+                {% if not video_anterior.id %} brightness-50 pointer-events-none {% endif %}
+            "
+        >
             <svg class="w-24 h-24 group-hover:-translate-x-4 transition">
                 <use xlink:href="#icon_go_back"></use>
             </svg>
@@ -54,7 +60,13 @@
             </button>
         </div>
 
-        <a href="" js-next class="group flex items-center gap-8 font-medium text-base text-white leading-[1.1875rem]">
+        <a 
+            href="/cursos/video/{{modulo_atual.id}}/{{video_proximo.id}}/?curso={{modulo_atual.id}}" 
+            class="
+                group flex items-center gap-8 font-medium text-base text-white leading-[1.1875rem]
+                {% if not video_proximo.id %} brightness-50 pointer-events-none {% endif %}
+            "
+        >
             <span class="sm:hidden">Próxima aula</span>
 
             <svg class="w-24 h-24 rotate-180 group-hover:translate-x-4 transition">
