--- a/PycharmProjects/logbit-assessment-front-marlon (2)/logbit-assessment-front-marlon/templates/base/base.html
+++ b/PycharmProjects/logbit-assessment-front-marlon (2)/logbit-assessment-front-marlon/templates/base/base.html
@@ -119,6 +119,11 @@
     <!-- Swiper -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 
+    <!-- Tippy.js -->
+    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
+    <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/themes/light.css"/>
+
     <!-- Sidebar search -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"
         integrity="sha512-eP6ippJojIKXKO8EPLtsUMS+/sAGHGo1UN/38swqZa1ypfcD4I0V/ac5G3VzaHfDaklFmQLEs51lhkkVaqg60Q=="
